55. added icon to the 'inprogress' tasks, so it's more visually clearer, fixed the switching between states in tasks it was kinda bugged, added a new option to the select 'none', which shows no tasks and moved the 'all' option to the top behind 'none' option

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -815,3 +815,7 @@ textarea {
     height: 20px;
     display: none;
 }
+
+.calendarText {
+    height: 200px;
+}
